# ptyrannosaur

./: LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-book.yml
book/: _config.yml  _toc.yml  myst.yml
scripts/final_model/: experimental_config.json  final_eval_exp.py
src/ptyrannosaur/: __init__.py
src/ptyrannosaur/engine/: dataset.py  stitching.py  utils.py
src/ptyrannosaur/models/: autoencoder.py
