[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ptyrannosaur"
version = "0.1.0"
description = "Ptychography using Robust Artificial Neural Networks Optimized for Sub-Ångstrom Accuracy and Ultrafast Reconstruction"
authors = [
    { name = "Kieran Loehr", email = "kloehr@illinois.edu" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "D", "N"]